--- a/tests/core/connection/ble/BUILD.gn
+++ b/tests/core/connection/ble/BUILD.gn
@@ -20,6 +20,7 @@ softbus_adapter_common = "${dsoftbus_root_path}/adapter/common"
 
 config("softbus_connection_ble_test_config") {
   include_dirs = [
+    "$dsoftbus_root_path/tests/core/connection/ble/mock",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/interfaces/kits/discovery",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
@@ -52,7 +53,7 @@ ohos_unittest("ConnectionBleTest") {
   module_out_path = module_output_path
   public_configs = [ ":softbus_connection_ble_test_config" ]
   sources = [
-    "connection_ble_mock.cpp",
+    "$dsoftbus_root_path/tests/core/connection/ble/mock/connection_ble_mock.cpp",
     "connection_ble_test.cpp",
   ]
 
@@ -95,8 +96,8 @@ ohos_unittest("BleConnectionServiceTest") {
   module_out_path = module_output_path
   public_configs = [ ":softbus_connection_ble_test_config" ]
   sources = [
+    "$dsoftbus_root_path/tests/core/connection/ble/mock/connection_ble_mock.cpp",
     "ble_service_connection_test.cpp",
-    "connection_ble_mock.cpp",
   ]
 
   deps = [
@@ -127,8 +128,42 @@ ohos_unittest("BleConnectionManagerTest") {
     "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_connection.c",
     "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_manager.c",
     "$dsoftbus_root_path/core/connection/manager/softbus_conn_manager.c",
-    "connection_ble_manager_mock.cpp",
+    "$dsoftbus_root_path/tests/core/connection/ble/mock/connection_ble_manager_mock.cpp",
     "connection_ble_manager_test.cpp",
+  ]
+
+  deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/googletest:gmock_main",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
+}
+
+ohos_unittest("BleTransTest") {
+  module_out_path = module_output_path
+  include_dirs = [
+    "$softbus_adapter_common/include",
+    "$dsoftbus_root_path/core/common/dfx/interface/include",
+    "$dsoftbus_root_path/core/connection/ble/include",
+    "$dsoftbus_root_path/core/connection/common/include",
+    "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/core/connection/manager",
+    "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
+    "$dsoftbus_root_path/adapter/common/include",
+    "$dsoftbus_root_path/tests/core/connection/ble/mock",
+  ]
+  sources = [
+    "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_send_queue.c",
+    "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_trans.c",
+    "$dsoftbus_root_path/tests/core/connection/ble/mock/connection_ble_trans_mock.cpp",
+    "connection_ble_trans_test.cpp",
   ]
 
   deps = [
