--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -30,6 +30,7 @@ group("unittest") {
     deps += [
       "ble:BleConnectionManagerTest",
       "ble:BleConnectionServiceTest",
+      "ble:BleTransTest",
       "ble:ConnectionBleSwitchTest",
       "ble:ConnectionBleTest",
     ]
