--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -313,6 +313,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/sdk/transmission/ipc/standard/src",
       "$dsoftbus_root_path/sdk/transmission/ipc/standard/include",
       "$dsoftbus_root_path/core/frame/standard/init/include",
+      "$dsoftbus_root_path/sdk/transmission/session/include",
     ]
 
     deps = trans_sdk_test_common_deps
