--- a/tests/sdk/transmission/fuzztest/clienttransfile_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/clienttransfile_fuzzer/BUILD.gn
@@ -47,8 +47,10 @@ ohos_fuzztest("ClientTransFileFuzzTest") {
   ]
   sources = [ "clienttransfile_fuzzer.cpp" ]
   deps = [ "../../../../../sdk:softbus_client" ]
-
-  external_deps = [ "c_utils:utils" ]
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
 }
 
 ###############################################################################
