--- a/tests/sdk/transmission/fuzztest/clienttransudpstreaminterface_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/clienttransudpstreaminterface_fuzzer/BUILD.gn
@@ -41,7 +41,10 @@ ohos_fuzztest("ClientTransUdpStreamInterfaceFuzzTest") {
   ]
   sources = [ "clienttransudpstreaminterface_fuzzer.cpp" ]
   deps = [ "../../../../../sdk:softbus_client" ]
-  external_deps = [ "c_utils:utils" ]
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
 }
 
 ###############################################################################
