--- a/tests/sdk/transmission/trans_channel/monitor_permission_test/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/monitor_permission_test/BUILD.gn
@@ -34,7 +34,10 @@ ohos_unittest("CheckPermissionTest") {
     "//third_party/googletest:gtest_main",
   ]
 
-  external_deps = [ "c_utils:utils" ]
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
 }
 group("unittest") {
   testonly = true
