--- a/tests/core/common/utils/fuzztest/converthexstringtobytes_fuzzer/BUILD.gn
+++ b/tests/core/common/utils/fuzztest/converthexstringtobytes_fuzzer/BUILD.gn
@@ -31,6 +31,6 @@ ohos_fuzztest("ConvertHexStringToBytesFuzzTest") {
     "-fno-omit-frame-pointer",
   ]
   sources = [ "converthexstringtobytes_fuzzer.cpp" ]
-
   deps = [ "$dsoftbus_root_path/core/common:softbus_utils" ]
+  external_deps = [ "hilog:libhilog" ]
 }
