--- a/tests/sdk/transmission/fuzztest/clienttransstream_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/clienttransstream_fuzzer/BUILD.gn
@@ -42,7 +42,10 @@ ohos_fuzztest("ClientTransStreamFuzzTest") {
   ]
   sources = [ "clienttransstream_fuzzer.cpp" ]
   deps = [ "../../../../../sdk:softbus_client" ]
-  external_deps = [ "c_utils:utils" ]
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
 }
 
 ###############################################################################
