--- a/tests/sdk/transmission/fuzztest/createsessionserver_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/createsessionserver_fuzzer/BUILD.gn
@@ -39,10 +39,11 @@ ohos_fuzztest("CreateSessionServerFuzzTest") {
     "-fstack-protector-strong",
   ]
   sources = [ "createsessionserver_fuzzer.cpp" ]
-
   deps = [ "../../../../../sdk:softbus_client" ]
-
-  external_deps = [ "c_utils:utils" ]
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
 }
 
 ###############################################################################
