--- a/tests/sdk/transmission/fuzztest/opensession_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/opensession_fuzzer/BUILD.gn
@@ -40,10 +40,11 @@ ohos_fuzztest("OpenSessionFuzzTest") {
     "-fstack-protector-strong",
   ]
   sources = [ "opensession_fuzzer.cpp" ]
-
   deps = [ "../../../../../sdk:softbus_client" ]
-
-  external_deps = [ "c_utils:utils" ]
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
 }
 
 ###############################################################################
