--- a/tests/sdk/discovery/unittest/BUILD.gn
+++ b/tests/sdk/discovery/unittest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -25,6 +25,7 @@ if (defined(ohos_lite)) {
       output_dir = "$root_out_dir/test/unittest/dsoftbus"
       sources = [ "disc_sdk_test.cpp" ]
       include_dirs = [
+        "$dsoftbus_root_path/sdk/bus_center/manager/include",
         "$dsoftbus_root_path/interfaces/kits/discovery",
         "$dsoftbus_root_path/interfaces/kits/common",
         "$dsoftbus_root_path/tests/sdk/common/include",
@@ -76,6 +77,7 @@ if (defined(ohos_lite)) {
     module_out_path = module_output_path
     sources = [ "disc_sdk_test.cpp" ]
     include_dirs = [
+      "$dsoftbus_root_path/sdk/bus_center/manager/include",
       "$dsoftbus_root_path/core/common/inner_communication",
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/interfaces/kits/discovery",
