fix: fixed p2p test case
Signed-off-by: yifan-shi_admin <shiyifan10@huawei.com>

--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -39,7 +39,7 @@ group("unittest") {
     deps += [ "tcp:TcpManagerTest" ]
   }
   if (softbus_communication_wifi_feature) {
-    #deps += [ "wifi_direct:unittest" ]
+    deps += [ "wifi_direct:unittest" ]
   }
 }
 
