--- a/tests/core/connection/wifi_direct/channel/BUILD.gn
+++ b/tests/core/connection/wifi_direct/channel/BUILD.gn
@@ -24,6 +24,8 @@ ohos_unittest("WifiDirectChannelTest") {
   include_dirs = [
     "$dsoftbus_root_path/core/common/include",
     "$softbus_adapter_common/include",
+    "$dsoftbus_root_path/core/bus_center/interface",
+    "$softbus_adapter_common/core/bus_center/interface",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
     "$dsoftbus_root_path/core/connection/common/include",
