fix failed DiscBleTest
Signed-off-by: guowen666 <guowen31@huawei.com>

--- a/tests/core/discovery/ble/softbus_ble_mock/BUILD.gn
+++ b/tests/core/discovery/ble/softbus_ble_mock/BUILD.gn
@@ -60,15 +60,9 @@ ohos_unittest("DiscBleTest") {
   ]
 
   if (is_standard_system) {
-    external_deps = [
-      "c_utils:utils",
-      "hilog:libhilog",
-    ]
+    external_deps = [ "c_utils:utils" ]
   } else {
-    external_deps = [
-      "c_utils:utils",
-      "hilog:libhilog",
-    ]
+    external_deps = [ "c_utils:utils" ]
   }
 }
 
