--- a/tests/utils/utils.gni
+++ b/tests/utils/utils.gni
@@ -16,4 +16,7 @@ import("../../dsoftbus.gni")
 test_utils_src =
     [ "$dsoftbus_root_path/tests/utils/exception_branch_checker.cpp" ]
 
-test_utils_inc = [ "$dsoftbus_root_path/tests/utils" ]
+test_utils_inc = [
+  "$dsoftbus_root_path/tests/utils",
+  "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
+]
