add native caller permission check
Signed-off-by: lee <lilong32@huawei.com>

--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -18,7 +18,10 @@
                 "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
                 "ohos.permission.MANAGE_DISTRIBUTED_ACCOUNTS",
                 "ohos.permission.DISTRIBUTED_DATASYNC",
-                "ohos.permission.GET_DISTRIBUTED_ACCOUNTS"
+                "ohos.permission.GET_DISTRIBUTED_ACCOUNTS",
+                "ohos.permission.ACCESS_BLUETOOTH",
+                "ohos.permission.MANAGE_BLUETOOTH",
+                "ohos.permission.GET_BLUETOOTH_LOCAL_MAC"
             ],
             "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
             "critical" : [0, 10, 10]
