fix: fix log limit of VTP
Signed-off-by: xuxiaoqing <xuxiaoqing16@huawei.com>

--- a/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
+++ b/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
@@ -120,6 +120,7 @@ ohos_fuzztest("SoftbusClientStubFuzzTest") {
     "../../../../../sdk/frame/small/include",
     "../../../../../sdk/frame/mini/include",
     "../../../../../sdk/frame/common/include",
+    "../../../../../core/common/dfx/interface/include",
   ]
   cflags = [
     "-g",
