--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -23,6 +23,7 @@ group("unittest") {
   if (support_bluetooth && dsoftbus_feature_conn_br) {
     deps += [
       "br:BrConnTest",
+      "br:BrConnectionTest",
       "br:ConnectionBrTest",
     ]
   }
