--- a/tests/core/connection/br/BUILD.gn
+++ b/tests/core/connection/br/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -92,4 +92,50 @@ ohos_unittest("ConnectionBrTest") {
     "connection_br_mock.cpp",
     "connection_br_test.cpp",
   ]
+}
+
+ohos_unittest("BrConnectionTest") {
+  module_out_path = module_output_path
+
+  include_dirs = [
+    #"$dsoftbus_root_path/adapter/common/include",
+    "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
+    "$dsoftbus_root_path/core/adapter/br/include",
+    "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/bus_center/service/include",
+    "$dsoftbus_root_path/core/bus_center/interface",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
+    "$dsoftbus_root_path/core/connection/br/include",
+    "$dsoftbus_root_path/core/connection/ble/include",
+    "$dsoftbus_root_path/core/connection/common/include",
+    "$dsoftbus_root_path/tests/core/connection/br",
+    "//foundation/communication/bluetooth/interfaces/inner_api/include/c_header",
+    "//foundation/communication/bluetooth/interfaces/inner_api/include",
+  ]
+
+  deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/googletest:gmock",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
+  sources = [
+    "$dsoftbus_root_path/core/connection/br/src/softbus_conn_br_connection.c",
+    "$dsoftbus_root_path/core/connection/br/src/softbus_conn_br_manager.c",
+    "$dsoftbus_root_path/core/connection/br/src/softbus_conn_br_trans.c",
+    "br_connection_test.cpp",
+    "br_mock.cpp",
+  ]
+}
+
+group("unittest") {
+  testonly = true
+  deps = [ ":BrConnectionTest" ]
 }
