fixed 3cbc974 from https://gitee.com/huhuhy/communication_dsoftbus/pulls/5295 [test]: Delete the external deps of hilog in BUILD.gn
Signed-off-by: huxianghao <huxianghao@huawei.com>

--- a/tests/core/discovery/ipc/BUILD.gn
+++ b/tests/core/discovery/ipc/BUILD.gn
@@ -50,18 +50,10 @@ ohos_unittest("DiscClientProxyTest") {
     "//third_party/googletest:gtest_main",
   ]
 
-  if (is_standard_system) {
-    external_deps = [
-      "c_utils:utils",
-      "hilog:libhilog",
-    ]
-  } else {
-    external_deps = [
-      "c_utils:utils",
-      "hilog:libhilog",
-    ]
-  }
-  external_deps += [ "ipc:ipc_core" ]
+  external_deps = [
+    "c_utils:utils",
+    "ipc:ipc_core",
+  ]
 }
 
 group("unittest") {
