--- a/tests/adapter/bluetooth/BUILD.gn
+++ b/tests/adapter/bluetooth/BUILD.gn
@@ -91,6 +91,7 @@ if (!defined(ohos_lite)) {
     if (support_bluetooth &&
         (dsoftbus_feature_conn_ble || dsoftbus_feature_conn_br)) {
       deps += [
+        "broadcast:unittest",
         # ":AdapterBleGattClientTest",
         # ":AdapterBleGattServerTest",
         # ":AdapterBtCommonTest",
