--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -79,10 +79,13 @@ ohos_unittest("AuthEnhanceMockTest") {
   sanitize = {
     cfi = true
     cfi_cross_dso = true
-    debug = true
+    debug = false
   }
   sources = [
     "$dsoftbus_root_path/core/adapter/authentication/src/lnn_extdata_config_virtual.c",
+    "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_ohos_account_adapter_virtual.cpp",
+    "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor_virtual.cpp",
+    "$dsoftbus_root_path/core/authentication/bind/auth_device_profile_listener_virtual.cpp",
     "$dsoftbus_root_path/core/authentication/src/auth_common.c",
     "$dsoftbus_root_path/core/authentication/src/auth_connection.c",
     "$dsoftbus_root_path/core/authentication/src/auth_deviceprofile_virtual.cpp",
@@ -96,9 +99,12 @@ ohos_unittest("AuthEnhanceMockTest") {
     "$dsoftbus_root_path/core/authentication/src/auth_session_message.c",
     "$dsoftbus_root_path/core/authentication/src/auth_tcp_connection.c",
     "$dsoftbus_root_path/core/authentication/src/virtual/auth_device_common_key_virtual.c",
+    "$dsoftbus_root_path/core/authentication/src/virtual/auth_hichain_system_ability_monitor_virtual.c",
     "$dsoftbus_root_path/core/authentication/src/virtual/auth_meta_manager_virtual.c",
+    "$dsoftbus_root_path/core/authentication/src/virtual/customized_security_protocol_virtual.c",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_cipherkey_manager_virtual.c",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_device_info_recovery_virtual.c",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_ptk_info_virtual.c",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_feature_capability.c",
     "$dsoftbus_root_path/core/bus_center/utils/src/lnn_compress.c",
     "$dsoftbus_root_path/core/bus_center/utils/src/lnn_state_machine.c",
@@ -161,7 +167,6 @@ ohos_unittest("AuthEnhanceMockTest") {
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/common/dfx/log:softbus_dfx_log",
-    "$dsoftbus_root_path/core/frame:softbus_server",
     "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
     "//third_party/bounds_checking_function:libsec_shared",
     "//third_party/googletest:gmock",
