链路状态监听 https://gitee.com/openharmony/communication_dsoftbus/issues/I95OMH
Signed-off-by: x30053509 <965446201@qq.com>

--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -50,6 +50,7 @@ if (dsoftbus_feature_lnn_net) {
     "$core_lane_hub_path/lane_manager/src/lnn_select_rule.c",
     "$core_lane_hub_path/lane_manager/src/lnn_trans_lane.c",
     "$core_lane_hub_path/lane_manager/src/lnn_lane_reliability.c",
+    "$core_lane_hub_path/lane_manager/src/lnn_lane_listener.c",
   ]
 
   if (enhanced) {
