fixed adb50e4 from https://gitee.com/sun-jiashun-123/communication_dsoftbus/pulls/5455 Description:UT test case is fixing Feature or Bugfix:Bugfix Binary Source:NA
Signed-off-by: sun-jiashun-123 <sunjiashun@huawei.com>

--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -79,7 +79,7 @@ ohos_unittest("AuthEnhanceMockTest") {
   sanitize = {
     cfi = true
     cfi_cross_dso = true
-    debug = false
+    debug = true
   }
   sources = [
     "$dsoftbus_root_path/core/adapter/authentication/src/lnn_extdata_config_virtual.c",
