--- a/tests/core/connection/wifi_direct/BUILD.gn
+++ b/tests/core/connection/wifi_direct/BUILD.gn
@@ -71,6 +71,7 @@ ohos_unittest("WifiDirectTest") {
     "wifi_direct_fast_connect_test.cpp",
     "wifi_direct_initiator_test.cpp",
     "wifi_direct_ip_manager_test.cpp",
+    "wifi_direct_manager_test.cpp",
     "wifi_direct_negotiator_test.cpp",
     "wifi_direct_role_negotiator_test.cpp",
     "wifi_direct_role_option_test.cpp",
