fix: update deps
Signed-off-by: JanierVan <fanjingya1@huawei.com>

--- a/core/transmission/trans.gni
+++ b/core/transmission/trans.gni
@@ -16,8 +16,7 @@ import("../../core/transmission/trans_channel/trans_channel.gni")
 import("../../dsoftbus.gni")
 
 native_source_path = rebase_path("$dsoftbus_root_path")
-broadcast_dep_dir =
-    "dsoftbus_enhance/core/transmission/trans_channel/ble_broadcast"
+broadcast_dep_dir = "dsoftbus_enhance/core/broadcast/notification_message"
 enhanced_broadcast = exec_script("$dsoftbus_root_path/check_sub_module.py",
                                  [
                                    "$native_source_path",
