--- a/sdk/transmission/session/trans_session_sdk.gni
+++ b/sdk/transmission/session/trans_session_sdk.gni
@@ -52,8 +52,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/sdk/transmission/session/cpp/src/session_service_impl.cpp",
   ]
 
-  broadcast_dep_dir =
-      "dsoftbus_enhance/core/transmission/trans_channel/ble_broadcast"
+  broadcast_dep_dir = "dsoftbus_enhance/core/broadcast/notification_message"
   enhanced_broadcast = exec_script("$dsoftbus_root_path/check_sub_module.py",
                                    [
                                      "$native_source_path",
