feat:add encrypt option for raw stream data
Signed-off-by: yueyan <yueyan8@huawei.com>

--- a/tests/sdk/transmission/BUILD.gn
+++ b/tests/sdk/transmission/BUILD.gn
@@ -40,6 +40,11 @@ group("integration_test") {
   deps = [ "integration_test:integration_test" ]
 }
 
+group("moduletest") {
+  testonly = true
+  deps = [ "moduletest:moduletest" ]
+}
+
 group("unittest") {
   testonly = true
   deps = [
