--- a/tests/core/transmission/fuzztest/transproxyonmessagereceived_fuzzer/BUILD.gn
+++ b/tests/core/transmission/fuzztest/transproxyonmessagereceived_fuzzer/BUILD.gn
@@ -26,6 +26,9 @@ ohos_fuzztest("TransProxyonMessagereceivedFuzzTest") {
   fuzz_config_file = "$dsoftbus_root_path/tests/core/transmission/fuzztest/transproxyonmessagereceived_fuzzer"
 
   include_dirs = [
+    "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+    "$dsoftbus_root_path/core/bus_center/interface",
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy/include",
     "$dsoftbus_root_path/core/transmission/common/include",
     "$dsoftbus_root_path/interfaces/kits/transport",
