[Feature]:Add access control verification on the server during transmission session negotiation
Signed-off-by: zhang <zhangfengxi@huawei.com>

--- a/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -173,6 +173,7 @@ ohos_unittest("TransTcpDirectMessageTest") {
   include_dirs = [
     "$softbus_adapter_common/include",
     "$dsoftbus_root_path/core/adapter/transmission/include",
+    "$dsoftbus_root_path/core/common/security/permission/include",
     "$dsoftbus_root_path/core/adapter/common/include",
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/connection/wifi_direct",
@@ -397,6 +398,7 @@ ohos_unittest("TransTcpDirectMessageStaticTest") {
     "$softbus_adapter_common/include",
     "$dsoftbus_root_path/core/adapter/transmission/include",
     "$dsoftbus_root_path/core/adapter/common/include",
+    "$dsoftbus_root_path/core/common/security/permission/include",
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/connection/wifi_direct",
     "$dsoftbus_root_path/core/discovery/interface",
