--- a/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
+++ b/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
@@ -27,7 +27,7 @@ ohos_unittest("TransUdpNegoTest") {
     "$softbus_adapter_common/include",
     "dsoftbus_dfx_path/interface/include",
     "$dsoftbus_root_path/core/common/include",
-
+    "$dsoftbus_root_path/core/common/security/permission/include",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/transmission/common/include",
