--- a/tests/core/transmission/trans_channel/manager/trans_channel_manager_test/BUILD.gn
+++ b/tests/core/transmission/trans_channel/manager/trans_channel_manager_test/BUILD.gn
@@ -28,6 +28,7 @@ ohos_unittest("TransChannelManagerTest") {
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/discovery/interface",
     "$dsoftbus_root_path/interfaces/kits/discovery",
+    "$dsoftbus_root_path/core/common/security/permission/include",
     "$dsoftbus_root_path/core/discovery/manager/include",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/interface",
