--- a/tests/core/transmission/trans_channel/proxy_channel/BUILD.gn
+++ b/tests/core/transmission/trans_channel/proxy_channel/BUILD.gn
@@ -25,7 +25,7 @@ ohos_unittest("TransProxyChannelTest") {
 
   include_dirs = [
     "$softbus_adapter_common/include",
-
+    "$dsoftbus_root_path/core/common/security/permission/include",
     "$dsoftbus_root_path/core/adapter/bus_center/include",
     "$dsoftbus_root_path/core/adapter/transmission/include",
     "$dsoftbus_root_path/core/authentication/include",
@@ -98,6 +98,7 @@ ohos_unittest("SoftbusProxyChannelManagerTest") {
 
   include_dirs = [
     "$softbus_adapter_common/include",
+    "$dsoftbus_root_path/core/common/security/permission/include",
     "$trans_comm_mock_path/include",
     "$dsoftbus_root_path/core/adapter/bus_center/include",
     "$dsoftbus_root_path/core/adapter/transmission/include",
@@ -412,7 +413,7 @@ ohos_unittest("SoftbusProxyChannelListenerTest") {
     "$dsoftbus_root_path/core/adapter/transmission/include",
     "$dsoftbus_root_path/core/authentication/include",
     "$dsoftbus_root_path/core/authentication/interface",
-
+    "$dsoftbus_root_path/core/common/security/permission/include",
     "$dsoftbus_root_path/core/bus_center/interface",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
